# ffpa-attn

./: .clang-format  .clang_format.hook  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  build_tail.txt  build_tail_output.txt  env.py  ffpa.py  ffpa_speedup.md  ffpa_speedup_nvidia-l20_B1_H32_N1024_D320.md  ffpa_speedup_nvidia-l20_B1_H32_N128_D64.md  ffpa_speedup_nvidia-l20_B1_H32_N8192_D512.md  ffpa_speedup_nvidia-rtx-5090-blackwell_B1_H32_N8192_D512.md  last_30.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tail_output.txt
.dev/: .cpplint_pre_commit.hook  clear.sh  commit-prepare.sh  init_dev.sh  init_prod.sh  init_prod_mini.sh  install.sh  uninstall.sh
.github/: .gitignore
.github/workflows/: check-mkdocs.yml  pre-commit.yml
bench/: README.md  bank_conflicts_check.sh  bench.sh  bench_ffpa_attn.py  bench_ffpa_bwd.py  bench_ffpa_fwd.py
bench/autotune/: verify_persistent_autotune.py
csrc/: faster_prefill_attn_F16F16F16F16.cu  faster_prefill_attn_F16F16F16F16_L1.cu  faster_prefill_attn_F32F16F16F32.cu  faster_prefill_attn_F32F16F16F32_L1.cu  faster_prefill_attn_api.cc  mma_utils.cuh  smem_swizzle.cuh
csrc/cuffpa/: cp_async.cuh  dtype_traits.cuh  faster_prefill_attn_F16F16F16F16_L1.cu  faster_prefill_attn_F16F16F32_L1.cu  faster_prefill_attn_F32F16F16F32_L1.cu  ffpa_attn_F16F16F16_L1.cu  ffpa_attn_F16F16F32_L1.cu  ffpa_attn_api.cc  ffpa_attn_bwd_templates.cuh  ffpa_attn_fwd.cuh  ffpa_attn_fwd_split_kv.cuh  ffpa_attn_fwd_templates.cuh  ffpa_attn_fwd_templates_sm90.cuh  ffpa_attn_template_L1.cuh  ffpa_attn_templates.cuh  ffpa_attn_templates_L1.cuh  ffpa_attn_templates_sm90.cuh  launch_templates.cuh  logging.cuh  mma.cuh  prefill.cuh  swizzle.cuh  tma.cuh  utils.cuh  warp.cuh
csrc/cuffpa/deprecated/: README.md  ffpa_attn_bwd.cuh  ffpa_attn_fwd_sm90.cuh
csrc/deprecated/: faster_prefill_attn_F16F16F16F16_L1.cu  faster_prefill_attn_F32F16F16F32_L1.cu
csrc/extension/: .gitignore
csrc/pybind/: faster_prefill_attn_api.cc  ffpa_attn_api.cc
docs/: env.md  index.md
docs/api/: ffpa_attn.md
docs/bench/: README.md
docs/benchmark/: README.md
docs/developer_guide/: pre-commit.md
docs/examples/: README.md
docs/user_guide/: autotune.md
examples/: README.md  _attention_flops.py  _attn_bwd.py  _attn_flops.py  _attn_fwd.py  ffpa_attn_bwd.py  ffpa_attn_fwd.py  ffpa_speedup_nvidia-l20_B1_H32_N8192_D512.md  perf.py  perf_cutedsl.py  run_ffpa_attn.py
examples/autotune/: verify_persistent_autotune.py
examples/reference/: flash_attn_triton.py  flash_attn_v2_triton.py
ffpa_attn/: .gitignore  __init__.py  ffpa_attn_interface.py  interface.py  version.py
ffpa_attn/triton/: _ffpa_bwd.py
include/: .gitignore
include/cuffpa/: cp_async.cuh  logging.cuh  mma.cuh  prefill.cuh  swizzle.cuh  tma.cuh  utils.cuh  warp.cuh
include/cuffpa/deprecated/: mma_utils.cuh  smem_swizzle.cuh
include/extension/: .gitignore
include/ffpa_attn/: prefill.cuh  smem_swizzle.cuh  utils.cuh
include/ffpa_attn/deprecated/: smem_swizzle.cuh
mma/: faster_prefill_attn_F16F16F16F16.cu  faster_prefill_attn_F32F16F16F32.cu  flexiable_prefill_attn.cu  utils.h
pyffpa/: .gitignore  __init__.py  interface.py  version.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/ffpa_attn/: index.html
site/benchmark/: index.html
site/examples/: index.html
site/search/: search_index.json
src/ffpa_attn/: __init__.py  autotune.py  bench.py  ffpa_attn_interface.py  functional.py  logger.py  version.py
src/ffpa_attn/aten/: __init__.py  _efficient_bwd.py  _flash_bwd.py  _flash_fwd.py  efficient_bwd.py
src/ffpa_attn/cli/: __init__.py  _bench.py  _flops.py  _runner_bwd.py  _runner_fwd.py
src/ffpa_attn/cuda/: __init__.py  _ffpa_bwd.py  _ffpa_fwd.py
src/ffpa_attn/cute/: README.md  __init__.py  _dkdv_d512_sm90.py  _dkdv_generic_sm80.py  _dkdv_generic_sm90.py  _dq_d384_sm90.py  _dq_d512_sm90.py  _dq_generic_sm80.py  _ffpa_bwd_sm80.py  _ffpa_bwd_sm90.py  _ffpa_fwd_sm80.py  _ffpa_fwd_sm90.py  _fwd_d384_sm90.py  _fwd_d512_sm90.py  _fwd_generic_sm80.py  _utils.py
src/ffpa_attn/cute/utils/: __init__.py  ampere_helpers.py  block_info.py  cache_utils.py  fa_logging.py  pack_gqa.py  pipeline.py  tile_scheduler.py
src/ffpa_attn/cutedsl/: README.md  __init__.py  _bwd_preprocess.py  _compile.py  _dkdv_d384_sm90.py  _dkdv_d512_sm90.py  _dkdv_generic_sm80.py  _dq_d384_sm90.py  _dq_d512_sm90.py  _dq_generic_sm80.py  _dq_generic_sm90.py  _ffpa_bwd_preprocess.py  _ffpa_bwd_sm80.py  _ffpa_bwd_sm90.py  _ffpa_dkdv_d512_sm90.py  _ffpa_dq_d512_sm90.py  _ffpa_fwd_d512_sm90.py  _ffpa_fwd_sm80.py  _ffpa_fwd_sm90.py  _fwd_d384_sm90.py  _fwd_d512_sm90.py  _fwd_generic_sm80.py  _fwd_generic_sm90.py  _interface.py  _utils.py  _wrappers.py  flash_bwd_preprocess.py  interface.py
src/ffpa_attn/cutedsl/utils/: __init__.py  block_info.py  cache_utils.py  cute_dsl_ptxas.py  cute_dsl_utils.py  fa_logging.py  mask.py  named_barrier.py  pack_gqa.py  pipeline.py  runtime.py  seqlen_info.py  softmax.py  tile_scheduler.py
src/ffpa_attn/ray/: __init__.py  _autotune_engine.py  _autotune_worker.py
src/ffpa_attn/triton/: __init__.py  _autotune_utils.py  _ffpa_bwd.py  _ffpa_bwd_sm90.py  _ffpa_bwd_split_kv.py  _ffpa_fwd.py  _ffpa_fwd_sm90.py  _persistent_autotune.py
src/ffpa_attn/triton/configs/: .gitkeep  NVIDIA_GeForce_RTX_5090.json  NVIDIA_L20.json  NVIDIA_RTX_PRO_5000_72GB_Blackwell.json
tests/: .gitignore  install.sh  swizzle_layout.py  test.py  test_ffpa_attn.py  test_ffpa_bwd.py  test_ffpa_compile.py  test_ffpa_cute.py  test_ffpa_cute_sm80.py  test_ffpa_cutedsl.py  test_ffpa_cutedsl_sm80.py  test_ffpa_fwd.py  test_logger.py  test_monkey_patch.py  test_perf_tflops.py  test_persistent_autotune_config.py  test_triton_autotune_mode.py
tools/: bank_conflicts_check.sh  build_fast.sh  build_releases.sh  nvcc  plot.py
