[bdist_wheel]
universal=1

[metadata]
license_files = LICENSE
desciption_file = README.md

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
# E111/E114/E121/E127/E128/E131 are pycodestyle's hard-coded 4-space indent
# checks; we use 2-space indent across the repo (see [yapf] and .clang-format)
# so these must be disabled for flake8 to agree with the formatter output.
ignore = E731, E203, E402, W503, W504, F821, E501, B, C4, EXE, E111, E114, E121, E127, E128, E131
per-file-ignores =
    __init__.py: F401, F403, F405
exclude = venv,csrc/cuffpa/generated,build,dist,ffpa_attn.egg-info,.tmp,ffpa_attn/_version.py

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring

[yapf]
# 2-space indentation for Python, matching the C/C++ convention used across
# the repository. column_limit mirrors flake8's max-line-length so yapf never
# produces lines that flake8 would then reject.
based_on_style = pep8
indent_width = 2
continuation_indent_width = 2
column_limit = 120
dedent_closing_brackets = true
coalesce_brackets = true
split_before_logical_operator = true
